# references

./: CSVFileReader.java  CSVFileReaderDouble.java  Dockerfile  FileReaderExample.java  Java_Migration_Project_Plan.pptx  Merchant Hierarchical Structure Schema-1751849590.sql  README.md  Split-IO-Business-Justification.docx  Thoughtworks Technology Radar Vol. 27.xlsx  UnicodeFileDetector.java  Widget-Application-Architecture.docx  devnexus-highlights.todo  image-pptx-0b0f98e6-4152-450f-8719-c43c80d49c28.pptx  learn-docker.txt  maven-docker-spring-boot-with-spring-integ-pom.xml  test
FIles/: CLAUDE.md  main.py  sales_report_data.csv  seaborn_sample_report.py
FIles missing/: first_quantum_program.py
dc/: build.gradle  settings.gradle
dc/gradle/wrapper/: gradle-wrapper.properties
dc/src/main/java/pnc/document/collaboration/: ConsoleApplication.java
dc/src/main/java/pnc/document/collaboration/Actions/: Action.java
dc/src/main/java/pnc/document/collaboration/beans/: GraphApiResponse.java  MyProfileResponse.java  OAuth2Token.java
dc/src/main/java/pnc/document/collaboration/config/: AppConfigration.java
dc/src/main/java/pnc/document/collaboration/service/: GraphApiService.java
dc/src/main/java/pnc/document/collaboration/utils/: Constants.java
dc/src/main/resources/: application.yml
dc/src/test/java/pnc/document/collaboration/: AppTest.java
files/: Makefile  QUICKSTART.md  README.md  pyproject.toml  run_tests.sh  setup.sh
filestest/: PROJECT_STRUCTURE.md  VERIFY_FILES.txt  base_page.py  config.py  inbox_page.py  locators.py  login_page.py  logout_page.py  test_e2e_flow.py  test_login.py  test_logout.py
oracle-to-oracle-batch/: README.md  build.gradle.kts  gradlew  gradlew.bat  settings.gradle.kts
oracle-to-oracle-batch/src/main/java/com/example/batch/config/: BatchConfig.java  BatchJobController.java  DataSourceConfig.java  JobLauncherConfig.java
oracle-to-oracle-batch/src/main/java/com/example/batch/listener/: JobCompletionNotificationListener.java
oracle-to-oracle-batch/src/main/java/com/example/batch/model/: Employee.java
oracle-to-oracle-batch/src/main/java/com/example/batch/processor/: EmployeeProcessor.java
oracle-to-oracle-batch/src/main/resources/: application.yml  schema-oracle.sql
oracle-to-oracle-batch/src/test/java/com/example/batch/: BatchApplicationTests.java
oracle-to-oracle-batch/src/test/resources/: application-test.yml
python/: README.md  conftest.py  pytest.ini  requirements.txt  run_tests.sh
spring-batch-csv-oracle 2/: README.md  build.gradle.kts  settings.gradle.kts
spring-batch-csv-oracle 2/src/main/java/com/example/batch/: BatchApplication.java
spring-batch-csv-oracle 2/src/main/resources/: application.yml  schema-oracle.sql
spring-batch-csv-oracle 2/src/main/resources/data/: input.csv
spring-batch-csv-oracle 2/src/test/resources/: application-test.yml
(+10 files in other folders)
